# MLIR-learning

./: .gitignore  CMakeLists.txt  README.md  build-standalone.sh  build-toy.sh  build.sh  stadalone_world.mlir  standalone.cmake  toy.cmake
.github/workflows/: toy-x86-ubuntu.yml
dialect/: StandaloneDialect.h  StandaloneOps.h  StandaloneOps.td
include/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  Ops.td  Parser.h  Passes.h
others/: CMakeLists.txt  commandline.cpp
src/: toy.cpp
standalone/: CMakeLists.txt  LowerToLLVM.cpp  StandaloneDialect.cpp  StandaloneDialect.cpp.inc  StandaloneDialect.h.inc  StandaloneOps.cpp  StandaloneOps.cpp.inc  StandaloneOps.h  StandaloneOps.h.inc  StandaloneOps.td  StandalonePasses.h  createSimpleAttr.cpp  standalone-opt.cpp
standalone-opt/: CMakeLists.txt  standalone-opt.cpp
test/: CMakeLists.txt  codegen.toy  lit.cfg.py  lit.site.cfg.py.in  toy.mlir  toyToAffine.mlir  transpose_transpose.toy
toy/: AST.cpp  Dialect.cpp  Dialiect.cpp  MLIRGen.cpp  ToyCombine.cpp  ToyCombine.td  ToyToLLVM.cpp  toy.cpp  toyToAffineLoops.cpp
